--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-dynamic-vector-icons": "^1.1.6",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-localization": "^2.3.1",
+    "react-native-maps": "^0.31.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
